Fixed up CSS styling. - Overrode styling from google and stackoverflow. - Limited the width of rows so that overflow (hidden and ellipsis) can   be correctly applied.

--- a/touch_tab.css
+++ b/touch_tab.css
@@ -1,4 +1,9 @@
 #touch-tab {
+    font-family: arial, sans-serif;
+    box-sizing: content-box;
+}
+
+#touch-tab {
     display: block;
     position: fixed;
     top: 0;
@@ -37,15 +42,15 @@
 
 #touch-tab .touch-tab--filter-container {
     width: 100%;
-    font-size: 14pt;
     height: 24px;
     margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
-#touch-tab .touch-tab--filter {
+#touch-tab input.touch-tab--filter {
     width: 100%;
-    margin-bottom: 5px;
+    margin: 0 0 5px 0;
+    font-size: 14pt;
     color: gray;
     border: none;
     background-color: transparent;
@@ -67,37 +72,60 @@
 
 #touch-tab .touch-tab--candidates-container {
     display: block;
+    table-layout: fixed;
     max-height: calc(100% - 10px - 5px - 24px);
     overflow-y: auto;
 }
 
-.touch-tab--candidate {
+#touch-tab tr.touch-tab--candidate {
+    display: inline-block;
     width: 100%;
-    height: 50px;
+    height: -moz-fit-content;
 }
 
-.touch-tab--candidate.active {
+#touch-tab .touch-tab--candidate.active {
     background-color: rgba(211, 211, 211, 0.7);
 }
 
-.touch-tab--candidate img {
-    margin: 5px 15px 5px 5px;
+#touch-tab td.touch-tab--candidate-favicon {
+    display: inline-block;
+    position: relative;
+    float: left;
+    width: 54px;
+    height: calc(18px + 18px + 10px + 10px + 10px);
 }
 
-.touch-tab--candidate-title-url {
-    width: 100%;
+#touch-tab td.touch-tab--candidate-title-url {
+    display: inline-block;
+    float: left;
+    width: calc(100% - 60px);
 }
 
-.touch-tab--candidate-title-url p {
+#touch-tab .touch-tab--candidate-favicon img {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    margin: 0 15px 0 5px;
+}
+
+#touch-tab .touch-tab--candidate-title-url p {
+    display: inline-block;
+    height: 18px;
+    line-height: 18px;
     width: 100%;
-    overflow-x:; auto;
+    overflow: hidden;
     white-space: nowrap;
+    text-overflow:ellipsis;
+    vertical-align: middle;
 }
 
-.touch-tab--candidate-title {
-    font-size: 10pt;
+#touch-tab p.touch-tab--candidate-title {
+    font-size: 16px;
+    margin: 10px 0 10px 0;
 }
 
-.touch-tab--candidate-url {
+#touch-tab p.touch-tab--candidate-url {
+    font-size: 14px;
     color: gray;
+    margin: 0 0 10px 0;
 }
